[package]
name = "spire"
version = "0.0.23"
authors = ["lsk"]
license = "Apache-2.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = true
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
# opt-level = 3
# debug = false
# split-debuginfo = '...'  # Platform-specific.
# debug-assertions = false
# overflow-checks = false
# lto = false
# panic = 'unwind'
# incremental = false
# codegen-units = 16
# rpath = false
debug = true

# ##Optimize For Size
# strip = true

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }

base64 = "0.22.1"
bytes = "1.10.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
delay_timer = "0.11.6"
derive_builder = "0.20.2"
env_logger = "0.11.8"
futures = { version = "0.3.31", features = ["thread-pool"] }
futures-util = { version = "0.3.31", default-features = false }

h2 = "0.4.10"
http = "1.3.1"
http-body = "1.0.1"
http-body-util = { version = "0.1.3" }
hyper = { version = "1.6.0", features = ["full"] }
hyper-rustls = { version = "0.27.5", default-features = false, features = ["webpki-roots","native-tokio", "http1", "tls12", "logging"] }
hyper-staticfile = "0.10.1"
hyper-util = { version = "0.1.12", features = ["full"] }
instant-acme = "0.7.2"
ipnet = "2.11.0"
iprange = "0.6.7"
lazy_static = "1.5.0"
log = "0.4.27"
mockall = "0.13.1"
num_cpus = "1.16.0"
pkcs8 = { version = "0.10.2", features = ["encryption", "pem", "std"] }
prometheus = "0.14.0"
rand = "0.9.1"
rcgen = { version = "0.13.2", default-features = false, features = ["pem","crypto","ring"] }
regex = "1.11.1"
rustls = { version = "0.23.27", default-features = false, features = ["ring","tls12","logging"] }
rustls-pemfile = "2.2.0"
rustls-pki-types = "1.12.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_yaml = "0.9.33"
serial_test = "3.2.0"
sha-1 = "0.10.1"
strum_macros = "0.27.1"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full", "tracing"] }
tokio-rustls = { version = "0.26.2", default-features = false }
tokio-util = { version = "0.7.15", features = ["full","time"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.4", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = "0.3.19"
typetag = "0.2.20"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "fast-rng","macro-diagnostics"] }
webpki-roots = "1.0.0"
# native-tls = "0.2.11"
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = "0.5.4"


